# BSpricer

./: .gitignore  Prévisions_de_ventes.ipynb  README.md  pyproject.toml
bspricer/: config.py
bspricer/api/: main.py
bspricer/calibration/: __init__.py  implied_vol.py
bspricer/instruments/: __init__.py  credit.py  exotics.py  vanilla.py
bspricer/marketdata/: __init__.py  curves.py  providers.py
bspricer/models/: __init__.py  black_76.py  black_scholes.py  garman_kohlhagen.py
bspricer/performance/: __init__.py  benchmarks.py  cpp_wrapper.py  numba_kernels.py
bspricer/pricing/: __init__.py  analytics.py  credit.py  monte_carlo.py  rates.py
bspricer/risk/: __init__.py  greeks.py  scenarios.py
cpp/: CMakeLists.txt  README.md  bspricer_cpp.cpp
data/: README.md
docs/: audit_trail.md  methodology.md  model_card.md  one_pager.md
personal_portfolio/: settings.py  urls.py
personal_portfolio/templates/: base.html
streamlit_app/: app.py
tests/: test_black_scholes.py  test_monte_carlo.py  test_rates_credit.py
